@@ -1041,7 +1041,7 @@ main(int argc, char **argv)
     /* this value selected as a resaonable compromise between eliminating
      * needed faces and keeping degenerate faces
      */
-    tol.dist = 0.005;	/* default, same as MGED, RT, ... */
+    tol.dist = 0.0005;	/* default, same as MGED, RT, ... */
     tol.dist_sq = tol.dist * tol.dist;
     tol.perp = 1e-6;
     tol.para = 1 - tol.perp;
